// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionList should render correctly 1`] = `
<ol
  className="sc-bdVaJa eKiYv"
>
  <li
    className="sc-bwzfXH nvvBT"
    id={0}
    type="CREDIT"
  >
    <p
      className="sc-bxivhb ebNakS"
    >
      $ 10,00
    </p>
    <button
      className="sc-ifAKCX iQMyXW"
      onClick={[Function]}
      type="button"
    >
      X
    </button>
    <p
      className="sc-htpNat bhpHJD"
      id="partialTotal0"
    >
      Partial total: 
      $ 10,00
    </p>
  </li>
</ol>
`;

exports[`TransactionList should render correctly with type DEBIT prop 1`] = `
<ol
  className="sc-bdVaJa eKiYv"
>
  <li
    className="sc-bwzfXH pVnAt"
    id={0}
    type="DEBIT"
  >
    <p
      className="sc-bxivhb ebNakS"
    >
      $ 10,00
    </p>
    <button
      className="sc-ifAKCX iQMyXW"
      onClick={[Function]}
      type="button"
    >
      X
    </button>
    <p
      className="sc-htpNat bhpHJD"
      id="partialTotal0"
    >
      Partial total: 
      $ 10,00
    </p>
  </li>
</ol>
`;
